# micascript

./: Cargo.toml  README.md  jsconfig.json
.github/workflows/: actions.yml  rust.yml
src/: cli.rs  main.rs
src/runtime/: process.js  runtime.js
src/runtime/utils/: EventEmitter.js  FileSystem.js
tests/: test.js
types/: types.d.ts
